# stock-market-app

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pr-title-checker-config.json
.github/workflows/: code_quality_and_lint.yml  django_test_runner.yml
devtools/: create_and_apply_migrations.py  gesttext_windows  load_fixtures.py  remove_migrations_and_db.py
fixtures/: 002-users.json  003-skills.json  004-skills.json  005-tasks.json  007-offers.json  008-tasks-select-offers.json  010-chats.json  011-participants.json  012-messages.json  test passwords
src/deployment/aws/: Dockerfile
src/deployment/livetests_selenium/: test_chatapp.py
src/deployment/local/: .env_example  Dockerfile  docker-compose.yml
src/deployment/mikrus/: .env_example  Dockerfile  docker-compose.yml  start  start.sh
src/deployment/test/: Dockerfile  docker-compose.yml
src/psmproject/: manage.py  manage_permissions.py
src/psmproject/chatapi/: serializers.py  urls.py  views.py
src/psmproject/chatapp/: admin.py  consumers.py  exceptions.py  forms.py  managers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
src/psmproject/dashboardapp/: apps.py  urls.py  views.py
src/psmproject/factories/: factories.py
src/psmproject/fixtures/: groups.json  user_groups.json  users.json
src/psmproject/offerapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/testing/: driver.py  settings.py  test_create_task.py  test_delete_task.py
(+265 files in other folders)
